Excel Export Work

--- a/src/index.scss
+++ b/src/index.scss
@@ -1275,6 +1275,14 @@ background-position:270px -2670px;
   //   font-size: 14px !important;
   //   color : #9E9E9E !important; 
   // }
+  .statusFilter{
+    float: right;
+    margin: 1%;
+  }
+  .excelExpBtn{
+    float: right;
+    margin: 3px 5px 0 4px;
+  }
 .rdt_TableCol_Sortable {
   font-weight: 600 ;
   font-size: 14px ;
