--- a/src/index.scss
+++ b/src/index.scss
@@ -51,6 +51,19 @@ $gradient-4:linear-gradient(to right, #feb683,#ff8b92);
   float: none;
 
 }
+
+.loader-section{
+  height: 100px !important;
+  width: 100px !important;
+  margin: 0 auto;
+  vertical-align: middle;
+  top: 45%;
+  position: absolute;
+  left: 47%;
+  right: 47%;
+}
+.loader-hide{display: none;}
+
 body{
   background: #f5f5f5;
   overflow-x: hidden;
