--- a/src/index.scss
+++ b/src/index.scss
@@ -52,17 +52,17 @@ $gradient-4:linear-gradient(to right, #feb683,#ff8b92);
 
 }
 
-.loader-section{
-  height: 100px !important;
-  width: 100px !important;
-  margin: 0 auto;
-  vertical-align: middle;
-  top: 45%;
-  position: absolute;
-  left: 47%;
-  right: 47%;
-}
-.loader-hide{display: none;}
+// .loader-section{
+//   height: 100px !important;
+//   width: 100px !important;
+//   margin: 0 auto;
+//   vertical-align: middle;
+//   top: 45%;
+//   position: absolute;
+//   left: 47%;
+//   right: 47%;
+// }
+// .loader-hide{display: none;}
 
 body{
   background: #f5f5f5;
@@ -152,9 +152,9 @@ vertical-align: middle;
 width: calc(100vw - 0px) !important;
 align-items: center;
 }
-.loader-hide{
-display: none;
-}
+// .loader-hide{
+// display: none;
+// }
 
 .forget-pwd a{ 
 
@@ -217,9 +217,9 @@ font-size: 15px;
 button.reset-btn:focus {
   outline: none;
 }
- .back-btn {
-  padding: 10px 0 0 14px;
-}
+//  .back-btn {
+//   padding: 10px 0 0 14px;
+// }
 button:focus {
   outline: none;
 }
@@ -692,7 +692,7 @@ a,p,small,span{font-family: open sans;}
 .farm-card{
   border-radius: 2px;
   box-shadow:0px 2px 6px rgba(0, 0, 0, 0.3);
-   margin-bottom: 20px;
+   margin-bottom: 15px;
   //margin: 36px 0 32px 40px;
   padding-bottom: 10px;
   position: relative;
@@ -899,7 +899,7 @@ svg{
 }
 .table th, table td{
   border-top: none;
-  color: #9E9E9E;
+  color: #707070;
 }
 .table thead th{
   border-bottom: 1px solid #dee2e6;
@@ -1296,35 +1296,83 @@ background-position:270px -2670px;
   top: 70px;
   }
 
+ 
+  /****************************Loader Section************************/
+  
+//   .loader-section-hide{
+//     fill: #ff8b92;
+//     height: 10px;
+//     width: 40px;
+//     margin: 0 auto;
+//     vertical-align: middle;
+//     top: 76%;
+//     position: absolute;
+//     left: 54%;
 
+//   }
+//   .loader-hide{
+//    // height: 64px;
+//     width: 64px;
+//     position: relative;
+//     left: 50%;
+//     top: 50%;
+//     right: 50%;
+//     bottom: 50%;
+//     z-index: 2;
+//     background-color: rgba(0,0,0,-0.2);
+// }
+.loader-section-hide{
+height: 64px;
+width: 64px;
+position: absolute;
+left: 50%;
+top: 50%;
+right: 50%;
+bottom: 50%;
+//z-index: 2;
+background-color: rgba(0,0,0,-0.2);
+}
+.loader-hide{
+position: absolute;
+height: 64px;
+width: 64px;
+position: absolute;
+left: 50%;
+top: 45%;
+right: 50%;
+bottom: 50%;
+}
+.loader{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  right: 50%;
+  bottom: 50%;
+ // z-index: 2;
+}
 
+  /****************************Export-user management************************/
+
+.status-filter{
+  text-align:right;
+  margin: 15px 0 0;
+}
+.excel-btn{
+  float: right;
+  background-image: linear-gradient(to right, #ff8b92, #feb683);
+  color: #fff;
+  border-radius: 5px;
+  padding: 0 15px;
+  margin-left: 13px;
+}
   /****************************Temporary datatable Section************************/
 
-  // .juoDAN{
-  //   font-weight: bold !important;
-  //   font-size: 14px !important;
-  //   color : #9E9E9E !important;
-  // }
-  // .cZGXXG{
-  //   font-weight: bold !important;
-  //   font-size: 14px !important;
-  //   color : #9E9E9E !important; 
-  // }
-  
-  .status-filter{
-    text-align:right;
-    margin: 15px 0 0;
-  }
-  .excelExpBtn{
-    float: right;
-    margin: 0 0 0 10px;
-  }
 .rdt_TableCol_Sortable {
   font-weight: 600 ;
   font-size: 14px ;
-  color : #9E9E9E ;
+  color : #707070 ;
 }
 .rdt_TableRow{
     font-size: 14px ;
-    color : #9E9E9E ; 
+    color :  #707070 ; 
   }
