--- a/src/index.scss
+++ b/src/index.scss
@@ -62,7 +62,8 @@ $gradient-4:linear-gradient(to right, #feb683,#ff8b92);
 //   left: 47%;
 //   right: 47%;
 // }
-// .loader-hide{display: none;}
+// .loader-hide{display: none;
+// }
 
 body{
   background: #f5f5f5;
@@ -207,6 +208,10 @@ font-size: 15px;
   font-size: 15px;
   color: #9EA0A2;
  }
+ .pt-search-box {
+  width: auto;
+  min-width: 180px;
+}
  .reset-btn{
   border: none;
   background-color: #F5F5F5;
@@ -445,9 +450,9 @@ a,p,small,span{font-family: open sans;}
   float: left;
 }
 
-.t-srch {
-  padding: 0 0px 0 5px;
-}
+// .t-srch {
+//   padding: 0 0px 0 5px;
+// }
 .steps-content {
   margin-top: 16px;
   border: 1px dashed #e9e9e9;
@@ -527,16 +532,15 @@ a,p,small,span{font-family: open sans;}
   text-align: center;
   padding: 9px 0 9px;
 }
-.title{
-  color: #767676;
+.label-title{
+  color: #707070;
   font-weight: 500;
-  margin: 0;
+  font-size: 15px;
 }
 .color-title{
   color: #ff8b92;
   font-weight: 500;
   font-size: 17px;
-
 }
 .user-title{
   color: #707070;
@@ -762,13 +766,13 @@ width: 137px;
 margin-left: 0;
 
 }
-.filter-icon{
-  color: transparent;
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: #717171;
-  padding: 5px 15px 5px 1px;
+// .filter-icon{
+//   color: transparent;
+//   -webkit-text-stroke-width: 1px;
+//   -webkit-text-stroke-color: #717171;
+//   padding: 5px 15px 5px 1px;
   
-}
+// }
 .search-btn{
   color:#9EA0A2;
   border: none;
@@ -776,9 +780,8 @@ margin-left: 0;
   background-color: #F5F5F5;
   // max-width: 166px;
   // width: 100%;
-  padding: 7px 15px 7px 35px;
+  padding: 4px 24px;
   text-align: left;
-  //padding: 7px 13px 7px 1px;
 //  font-size:14px;
  width: 202px;
  border-radius: unset;
@@ -1010,6 +1013,10 @@ svg{
   color:#9EA0B7;
   font-size: 16px;
 }
+.form-control:focus {
+  border-color: #aaa;
+  box-shadow: none;
+}
 .form-group{
   color: #808080;
  // font-size: 15px;
@@ -1029,6 +1036,7 @@ svg{
 }
  .search-label{
   color: #aaa;
+  padding-right: 9px;
 }
 
 /****************************Create Crop IMAGE PREVIEW************************/
@@ -1075,6 +1083,8 @@ svg{
   background-image: linear-gradient(to right, #ff8b92, #feb683);
   color: #fff;
   border-radius: 5px;
+
+ // width: 90px;
 }
 .drop-option{
   color: #000;
@@ -1298,29 +1308,7 @@ background-position:270px -2670px;
 
  
   /****************************Loader Section************************/
-  
-//   .loader-section-hide{
-//     fill: #ff8b92;
-//     height: 10px;
-//     width: 40px;
-//     margin: 0 auto;
-//     vertical-align: middle;
-//     top: 76%;
-//     position: absolute;
-//     left: 54%;
 
-//   }
-//   .loader-hide{
-//    // height: 64px;
-//     width: 64px;
-//     position: relative;
-//     left: 50%;
-//     top: 50%;
-//     right: 50%;
-//     bottom: 50%;
-//     z-index: 2;
-//     background-color: rgba(0,0,0,-0.2);
-// }
 .loader-section-hide{
 height: 64px;
 width: 64px;
@@ -1329,18 +1317,10 @@ left: 50%;
 top: 50%;
 right: 50%;
 bottom: 50%;
-//z-index: 2;
-background-color: rgba(0,0,0,-0.2);
 }
-.loader-hide{
-position: absolute;
-height: 64px;
-width: 64px;
-position: absolute;
-left: 50%;
-top: 45%;
-right: 50%;
-bottom: 50%;
+
+.loader-hide {
+ display: none;
 }
 .loader{
   position: absolute;
@@ -1348,14 +1328,30 @@ bottom: 50%;
   top: 50%;
   right: 50%;
   bottom: 50%;
- // z-index: 2;
 }
-
+.loader-overlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background-color: rgba(0,0,0,0.4);
+}
   /****************************Export-user management************************/
 
+.date-box{
+  border: 1px solid #aaa;
+  border-radius: 5px;
+}
+.main-filter{
+  text-align: left;
+  position: absolute;
+  display: flex;
+}
 .status-filter{
   text-align:right;
-  margin: 15px 0 0;
+ // margin: 15px 0 0;
 }
 .excel-btn{
   float: right;
@@ -1363,7 +1359,10 @@ bottom: 50%;
   color: #fff;
   border-radius: 5px;
   padding: 0 15px;
-  margin-left: 13px;
+ // margin-left: 13px;
+}
+.excel-btn:hover{
+  color: #fff;
 }
   /****************************Temporary datatable Section************************/
 
