--- a/src/index.scss
+++ b/src/index.scss
@@ -138,12 +138,16 @@ background-size: cover;}
 }
 .input-group {
   width: 275px;
-  border-bottom: none;  color: #4b4b4b;
-  //box-shadow: 0 1px 0px 0px #dcdcdc
-  
+  border-bottom: 1px solid #dcdcdc;  
+  box-shadow: 0 1px 0px 0px #dcdcdc
+
 }
+
 .daterangepicker td.active, .daterangepicker td.active:hover {
   background-color:#ff8b92;
+}
+input:focus {
+  outline: none;
 }
 .login-form .input-group .form-control{
   position: relative;
@@ -200,7 +204,10 @@ input:-khtml-autofill {
 -webkit-text-fill-color: #707070;
 }
 /****************************Button Section************************/
-
+.btn:focus {
+  outline: none;
+  box-shadow: none;
+}
 .btn{
 // border-radius:50px !important;
 padding:8px 10px  !important;
@@ -213,9 +220,17 @@ font-weight: 500;
 background-color: #ff8b92; /* For browsers that do not support gradients */
 background-image: linear-gradient(to right, #ff8b92 , #feb683);
 font-size: 15px;
+border: none;
 }
-// .btn-primary:hover{
+// .btn-primary.focus, .btn-primary:focus {
+//   box-shadow: 0 0 3px 1px #FE988D;
 // }
+.btn-primary:not(:disabled):not(.disabled).active:focus, 
+.btn-primary:not(:disabled):not(.disabled):active:focus, 
+.show>.btn-primary.dropdown-toggle:focus {
+  box-shadow: none;
+}
+
 .btn-default{
   background-color: #E1E7ED;
   font-size: 15px;
@@ -490,16 +505,20 @@ a,p,small,span{font-family: open sans;}
 //   background-color: pink;
 //   border-color: #096dd9;
 // }
-// button.ant-btn.btn.btn-primary.ant-btn-primary:hover {
-//   background-color: $gradient-1;
-// }
+button.ant-btn.btn.btn-primary.ant-btn-primary:hover {
+  background-color: $gradient-1;
+}
 .ant-btn-primary:hover, .ant-btn-primary:focus {
   color: #fff;
   background-image: $gradient-1;
+  border-color: transparent;
+}
+.ant-btn:hover, .ant-btn:focus, .ant-btn:active, .ant-btn.active{
+  border-color: #ff8b92;
 }
 .btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
   color: #fff;
-  border-color: #ff8b92;
+  border-color: #ff8b92!important;
   background-image: $gradient-1;
 }
 .ant-steps-item-process .ant-steps-item-icon {
@@ -653,6 +672,7 @@ a,p,small,span{font-family: open sans;}
 .sub-change {
   color: #bebebe;
   cursor: pointer;
+  outline: none;
 }
 // .retail-change{
 //   color: #707070;
@@ -766,8 +786,8 @@ a,p,small,span{font-family: open sans;}
   z-index: 1;
   padding: 0 2px;
   top: 72%;
-  // left: 10px;
-  left: -2px;
+  left: 10px;
+  //left: -2px;
   margin-left: 0;
   font-size: 10px;
 }
@@ -792,8 +812,8 @@ a,p,small,span{font-family: open sans;}
   z-index: 1;
   padding: 0 2px;
   top: 72%;
- // left: 61px;
-  left: 49px;
+  left: 61px;
+  //left: 49px;
   font-size: 10px;
   margin-left: 0;
 }
@@ -818,8 +838,8 @@ a,p,small,span{font-family: open sans;}
   z-index: 1;
   padding: 0 3px;
   top: 100%;
-  //left: 0;
-  left: -15px;
+  left: 0;
+  //left: -15px;
   margin-left: 0;
   font-size: 10px;
 }
@@ -891,9 +911,8 @@ margin-left: 0;
   border-color: rgba(223,225,229,0);
   border-radius: 17px;
 }
-.search-btn:focus {
-  border-color:transparent;
-  box-shadow: none;
+input.form-control.search-btn:focus {
+  border-color: transparent;
 }
 .search-icon{
   padding: 13px 0px 0px 10px;
@@ -1127,7 +1146,13 @@ svg{
   color:#9EA0B7;
   font-size: 16px;
 }
-
+.form-control:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #FE988D;
+  outline: none;
+  box-shadow:none;
+}
 .form-group{
   color: #808080;
  // font-size: 15px;
@@ -1188,6 +1213,9 @@ svg{
   color: #7D7D7D;
   font-weight: 600;
   font-size: 15px;
+}
+select:focus {
+  outline: none;
 }
 .drop-select{
   border: none;
@@ -1456,13 +1484,40 @@ bottom: 50%;
   /****************************Export-user management************************/
 
 .date-box{
-  border: 1px solid #aaa;
+  border: none;
+  display: flex;
   border-radius: 5px;
   cursor: pointer;
   width: 237px;
 }
+input.form-control.date-form {
+  width: auto;
+  height: 30px;
+}
+.date-btn{
+  background-image: $gradient-1;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  height: 30px;
+}
 .state-box{
   width: 240px;
+}
+// .state-filter .drop-select {
+//   width: 235px;
+// }
+.state-select{
+  border: none;
+  background-image: linear-gradient(to right, #ff8b92, #feb683);
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  // padding: 1px;
+  // word-wrap: break-word;
+  // text-overflow: inherit;
+  // white-space: normal;
+  // width: 120px;
 }
 .main-filter{
   text-align: left;
@@ -1580,3 +1635,15 @@ bottom: 50%;
 @media (max-width: 767px) { }
 @media (max-width: 480px) { }
 
+
+@media screen and (max-width:1140px){
+  .ticket-block .profile-img img{
+    width:85px;
+    height: auto;
+    background-color: red;
+  }
+  .ticket-block .profile-img{
+    width:85px;
+    height: auto;
+  }
+}
