--- a/src/index.scss
+++ b/src/index.scss
@@ -925,7 +925,7 @@ margin-left: 0;
 .search-btn:hover {
   box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);
   border-color: rgba(223,225,229,0);
-  border-radius: 17px;
+  // border-radius: 17px;
 }
 input.form-control.search-btn:focus {
   border-color: transparent;
@@ -1010,9 +1010,9 @@ svg{
 .advance-icon {
   background-image: url(/static/media/Sprite_image.f8e75c05.png);
   background-repeat: no-repeat;
-  background-position: -5px -1273px;
+  background-position:-5px -1274px;
   text-align: center;
-  padding: 7px 13px 0;
+  padding: 6px 13px 0;
   
 }
 .advance-search{
@@ -1020,6 +1020,31 @@ svg{
   background-image: linear-gradient(to right, #ff8b92, #feb683);
   border: none;
   border-radius: 5px;
+  max-height: 35px;
+  color: #fff;
+  padding: 0 5px;
+}
+.retailer-search{
+    border: none;
+    border-bottom: 1px solid #aaa;
+    padding: 4px 24px;
+    text-align: left;
+    width: 202px;
+    border-radius: unset;
+}
+.form-retailer{
+  display: flex;
+  float: right;
+}
+.search-box{
+  display: flex;
+}
+.search-img{
+  background-image: url(/static/media/Sprite_image.f8e75c05.png);
+  background-repeat: no-repeat;
+  background-position: -8px -1219px;
+  text-align: center;
+  padding: 13px;
 }
 /****************************User Management Page icon************************/
 
@@ -1130,7 +1155,7 @@ svg{
 .chart-graph{
   background-image: url("../src/assets/images/Sprite_image.png");
   background-repeat:no-repeat;
-  background-position: -9px -2722px;
+  background-position: -9px -2721px;
   padding:0 20px;
   color: #697a99;
   font-size: 13px;
@@ -1604,11 +1629,12 @@ text-align: right;
   position: relative;
 }
 .state-box{
-  width: 240px;
+  width: 100%;
 }
-// .state-filter .drop-select {
+.state-filter  {
 //   width: 235px;
-// }
+display: flex;
+ }
 .state-select{
   border: none;
   background-image: linear-gradient(to right, #ff8b92, #feb683);
@@ -1635,34 +1661,47 @@ text-align: right;
   max-width: 211px;
 }
 .main-filter{
-  margin-right: 30px;
-  
+  //margin-right: 30px;
+  margin-top: 10px;
+}
+.sub-filter{
+  margin-top: 10px;
 }
 // .status-filter{
 //   text-align:right;
 //  // margin: 15px 0 0;
 // }
 .city-filter{
-  padding: 0;
+  display: flex;
 }
-.status-filter{
-  padding: 0;
+.city-box{
+  width: 100%;
 }
-.state-filter{
-  padding-right: 0;
+.agent-filter{
+  display: flex;
 }
+// .status-filter{
+//   padding: 0;
+// }
+
 .excel-btn{
-  float: right;
-  background-image: linear-gradient(to right, #ff8b92, #feb683);
-  color: #fff;
-  border-radius: 5px;
-  padding: 1px 15px;
-  font-size: 15px;
-  margin-bottom: 25px;
- // margin-left: 13px;
+    display: block;
+    float: right;
+    background-image: linear-gradient(to right, #ff8b92, #feb683);
+    color: #fff;
+    border-radius: 5px;
+    padding: 0px 15pox;
+    font-size: 15px;
+    line-height: 33px;
+    /* margin-bottom: 25px; */
+    height: 33px;
+    padding: 0 5px;
 }
 .excel-btn:hover{
   color: #fff;
+}
+.retail-reset{
+  margin: 6px 6px 0 0;
 }
 .reset{
   background-image: linear-gradient(to right, #ff8b92 , #feb683);
@@ -1671,6 +1710,11 @@ text-align: right;
   border-radius: 12px;
   width: 25px;
   height: 25px;
+}
+.retail-seset{
+  margin: 0 11px 0 0;
+  width: 20px;
+  padding: 10px 28px 0 0;
 }
   /****************************Temporary datatable Section************************/
 
@@ -1710,25 +1754,31 @@ text-align: right;
   background-color: #F2C71C;
   border: none;
   color:#fff;
+  border-radius: 5px;
   text-transform:capitalize;
-  padding: 7px;
+  padding: 2px 7px;
   margin: auto;
+  width: 75px;
 }
 .accepted{
   background-color: #1CCE46;
   border: none;
+  border-radius: 5px;
   color: #fff;
   text-transform:capitalize;
-  padding: 7px;
+  padding: 2px 7px;
   margin: auto;
+  width: 75px;
 }
 .rejected{
   background-color: #EF4A4A;
   border: none;
+  border-radius: 5px;
   color: #fff;
   text-transform:capitalize;
-  padding: 7px;
+  padding: 2px 7px;
   margin: auto;
+  width: 75px;
 }
 // #datepicker{
 //   color: #1CCE46;
