--- a/src/index.scss
+++ b/src/index.scss
@@ -252,6 +252,8 @@ border: none;
   color: #aaa;
   padding: 13px 0px 0px 10px;
 }
+.allreset{margin-top: 7px;
+}
 button.reset-btn:focus {
   outline: none;
 }
