--- a/src/index.scss
+++ b/src/index.scss
@@ -958,7 +958,7 @@ button.ant-btn.btn.btn-primary.ant-btn-primary:hover {
  display: inline-block;
  white-space: nowrap;
  //width: 150px;
- margin-left: 0;
+ margin-left: 15px;
  width: auto;
  min-width: 137px;
  font-size: 15px;
