--- a/src/index.scss
+++ b/src/index.scss
@@ -149,13 +149,13 @@ background-size: cover;}
   white-space: unset !important;
 }
 .retailersearchdiv{
-  justify-content: left!important;
-  display:block!important;
+  justify-content: left;
+  display:block;
   text-align: left;
   > div, div.retail-reset, button.advance-search{
-    float: none!important;
-    display:inline-block!important;
-    vertical-align: middle!important;
+    float: none;
+    display:inline-block;
+    vertical-align: middle;
   }
   
  .advance-search{ color: #707070;
@@ -169,7 +169,8 @@ background-size: cover;}
   line-height: 36px;
 }
 .react-bootstrap-daterangepicker-container{
-  max-width: 82%;
+  // max-width: 82%;
+  max-width: 80%;
   width: 100%;
   .date-box{
     width:100%;
@@ -725,10 +726,10 @@ button.ant-btn.btn.btn-primary.ant-btn-primary:hover {
 .change-tab li {
   padding: 15px 30px;
 }
-// .table-wrapper{
-//     background-color:#fff;
-//     border-radius: 6px;
-// }
+.table-wrapper{
+    background-color:#fff;
+    border-radius: 6px;
+}
 .main-wrapper{
   background-color:#fff;
   border-radius: 6px;
@@ -939,7 +940,7 @@ button.ant-btn.btn.btn-primary.ant-btn-primary:hover {
   visibility: visible;
 }
 .right-title{
-  padding: 0 0 20px 0;
+  padding-bottom: 20px;
 }
 // .user-board{
 // margin: 0 0;
@@ -985,6 +986,9 @@ margin-left: 0;
 //   padding: 5px 15px 5px 1px;
   
 // }
+.search-board{
+  display: flex;
+}
 .search-btn{
   color:#9EA0A2;
   border: none;
@@ -998,13 +1002,14 @@ margin-left: 0;
  width: 202px;
  border-radius: unset;
 }
-.search-btn:hover {
-  box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);
-  border-color: rgba(223,225,229,0);
-  // border-radius: 17px;
-}
+// .search-btn:hover {
+//   //box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);
+//   border-color: rgba(223,225,229,0);
+//   // border-radius: 17px;
+// }
 input.form-control.search-btn:focus {
-  border-color: transparent;
+ // border-color: transparent;
+  background-color: #F5F5F5;
 }
 .search-icon{
   padding: 13px 0px 0px 10px;
@@ -1099,6 +1104,7 @@ svg{
   max-height: 35px;
   color: #fff;
   padding: 0 5px;
+  //padding: 18px 5px 0 18px;
 }
 .retailer-search{
     border: none;
@@ -1115,6 +1121,9 @@ svg{
 }
 .search-box{
   display: flex;
+  width: 89%;
+  font-size: inherit;
+  float: left;
 }
 .search-img{
   background-image: url(/static/media/Sprite_image.f8e75c05.png);
@@ -1123,12 +1132,12 @@ svg{
   text-align: center;
   padding: 13px;
 }
-.form-search .search-btn {
-  background: none;
-}
-.pt-search-btn .reset-btn {
-  background: none;
-}
+// .form-search .search-btn {
+//   background: #fff;
+// }
+// .pt-search-btn .reset-btn {
+//   background: none;
+// }
 /****************************User Management Page icon************************/
 
 .icon{
@@ -1323,10 +1332,17 @@ svg{
 
 /****************************List Crop************************/
 .form-search{
-  display: flex
+  //display: flex;
+ // width: 87%;
+  float: right;
 }
 .sub-search{
-  display: contents;
+  //display: contents;
+  -webkit-appearance: none;
+  position: relative;
+  margin-left: -28px;
+  top: 7px;
+  display: block;
 }
  .search-label{
   color: #aaa;
@@ -1558,7 +1574,10 @@ a.order-btn:hover {
   border: none;
 }
 /****************************Shop Details Section************************/
-
+.shop-centext{
+  width: 100%; 
+  height: 315px
+}
 .main-shop{
   border-right: 1px inset;
 }
@@ -1766,6 +1785,9 @@ display: flex;
 // .status-filter{
 //   padding: 0;
 // }
+.label-line{
+  line-height: 28px;
+}
 
 .excel-btn{
     display: block;
@@ -1793,6 +1815,7 @@ display: flex;
   border-radius: 12px;
   width: 25px;
   height: 25px;
+  line-height: 23px;
 }
 .retail-seset{
   margin: 0 11px 0 0;
@@ -1811,9 +1834,16 @@ display: flex;
     color :  #707070 ; 
     white-space: nowrap !important;
   }
-  .fetchretcss .rdt_TableRow{
-    font-size: 14px ;
+  .fetchretailertbl .rdt_TableRow{
     color :  #707070 ; 
+    font-weight: 600 ;
+  font-size: 14px;
+
+  }
+  .fetchretailertbl .rdt_TableCol_Sortable {
+    font-weight: 600 ;
+    font-size: 14px;
+    color : #707070;
   }
   // .crop-table{
   //   overflow-x: scroll;
@@ -1914,8 +1944,26 @@ display: flex;
     height: auto;
   }
 }
-
-
+@media screen and (max-width: 1300px) {
+  .react-bootstrap-daterangepicker-container{
+    max-width: 80%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .react-bootstrap-daterangepicker-container{
+    max-width: 78%;
+  }
+}
+@media screen and (min-width: 991px) and (max-width: 1199px){
+  .react-bootstrap-daterangepicker-container{
+    max-width: 71%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 991px){
+  .react-bootstrap-daterangepicker-container{
+    max-width: 67%;
+  }
+}
 body .main-header .navbar{
   padding: 0.1rem 1rem;
 }
